--- a/Rices/minimalist/Config/hypr/hyprpaper.conf
+++ b/Rices/minimalist/Config/hypr/hyprpaper.conf
@@ -1,2 +1,2 @@
-preload = ~/Pictures/Wallpapers/minimalist.jpg
-wallpaper = , ~/Pictures/Wallpapers/minimalist.jpg
+preload = ~/Pictures/Wallpapers/minimalist.png
+wallpaper = , ~/Pictures/Wallpapers/minimalist.png
