teto - update hyprlock

--- a/Rices/teto/Config/hypr/hyprlock.conf
+++ b/Rices/teto/Config/hypr/hyprlock.conf
@@ -1,36 +1,30 @@
 background {
-	blur_size =  7
-	blur_passes = 4
-	brightness = 0.8
+	monitor =
 	path = screenshot
+	blur_passes = 4
+	blur_size = 2
+	noise = 0.0117
+	brightness = 0.5172
+	vibrancy = 0.1696
+	vibrancy_darkness = 0.0
 }
 
 input-field {
     monitor =
-    size = 250, 60
+    size = 200, 50
     outline_thickness = 3
     inner_color = rgb(2d0000)
-    font_family = Noto Sans
     outer_color = rgb(ff3737)
     fail_color= rgb(ff8737)
     check_color= rgb(ff3766)
     font_color = rgb(A50000)
     fade_on_empty = false
     rounding = 25
-    placeholder_text = <b><i>Enter Password...</i></b>
-    position = 0, -20
-    halign = center
-    valign = center
-}
-
-label {
-    monitor =
-    text = This computer is locked, enter password for $USER
-    color = rgb(143, 143, 143) 
-    font_size = 18
-    font_family = Noto Sans
-
-    position = 0, 50
+    dots_center = true
+    dots_size = 0.2
+    dots_spacing = 0.15
+    placeholder_text = <b><i>Input Password...</i></b>
+    position = 0, -30
     halign = center
     valign = center
 }
@@ -38,10 +32,22 @@ label {
 label {
   monitor = 
   text = $TIME12
-  color = rgba(242, 243, 244, 0.75)
-  font_size = 95
-  font_family = JetBrains Mono Extrabold
-  position = 0, 200
+  color = rgba(200, 200, 200, 1.0)
+  font_size = 75
+  font_family = Noto Sans Bold
+  position = 0, 120
+  halign = center
+  valign = center
+}
+
+label {
+  monitor =
+  text = Enter your password to unlock
+  color = rgba(200, 200, 200, 1.0)
+  font_size = 15
+  font_family = Noto Sans
+
+  position = 0, 30
   halign = center
   valign = center
 }
