--- a/Rices/minimalist/Config/waybar/config.jsonc
+++ b/Rices/minimalist/Config/waybar/config.jsonc
@@ -15,9 +15,10 @@
 	},
 
 	"clock": {
-		"format": "{:%a %d %b // %I:%M %p}"
+		"format": "{:%a %d %b // %I:%M %p}",
+		"tooltip": false
 	},
-	"pulseaudio": {
+ 	"pulseaudio": {
     		"format": "{volume}% {icon}",
 		"format-muted": "0% {icon}",
     		"format-bluetooth": "{volume}% {icon}",
