--- a/Rices/teto/Config/hypr/hyprland.conf
+++ b/Rices/teto/Config/hypr/hyprland.conf
@@ -17,7 +17,6 @@
 # Create your files separately and then link them to this file like this:
 # source = ~/.config/hypr/myColors.conf
 
-
 ################
 ### MONITORS ###
 ################
@@ -75,7 +74,7 @@ general {
     border_size = 2
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgb(ff3737) 45deg
+    col.active_border = rgb(bf4040) 45deg
     col.inactive_border = rgb(411313)
 
     # Set to true enable resizing windows by clicking and dragging on borders and gaps
