--- a/Rices/teto/Config/fastfetch/config.jsonc
+++ b/Rices/teto/Config/fastfetch/config.jsonc
@@ -2,8 +2,8 @@
   "$schema": "https://github.com/fastfetch-cli/fastfetch/raw/dev/doc/json_schema.json",
   "display": {
 	"color": {
-		"title": "#ff3737",
-		"keys": "#ff3737"
+		"title": "#bf4040",
+		"keys": "#91382c"
 }
 },
   "modules": [
@@ -32,8 +32,8 @@
 ],
  "logo": {
 	"color": {
-		"1": "#ff3737",
-		"2": "#ff3737"
+		"1": "#bf4040",
+		"2": "#bf4040"
 	}
 }
 }
