--- a/Rices/fuwamoco/Config/waybar/config.jsonc
+++ b/Rices/fuwamoco/Config/waybar/config.jsonc
@@ -2,18 +2,12 @@
 	"layer":"top",
 	"modules-left": ["hyprland/workspaces"],
 	"modules-center": ["clock", "privacy"],
-	"modules-right": ["pulseaudio", "battery", "battery#bat1"],
+	"modules-right": ["pulseaudio", "battery"],
 	"battery": {
 		"bat": "BAT0",
 		"format": "INT {capacity}% ",
 		"interval": 60
 	},
-	"battery#bat1": {
-		"bat": "BAT1",
-		"interval": 60,
-		"format": "EXT {capacity}% "
-	},
-
 	"clock": {
 		"format": "{:%a %d %b // %I:%M %p}",
 		"tooltip": false
