--- a/Rices/fuwamoco/Config/hypr/hyprland.conf
+++ b/Rices/fuwamoco/Config/hypr/hyprland.conf
@@ -198,7 +198,7 @@ bind = $mainMod, left, movefocus, l
 bind = $mainMod, right, movefocus, r
 bind = $mainMod, up, movefocus, u
 bind = $mainMod, down, movefocus, d
-
+bind = $mainMod, F, fullscreen
 # Switch workspaces with mainMod + [0-9]
 bind = $mainMod, 1, workspace, 1
 bind = $mainMod, 2, workspace, 2
