Refactor wallpaper configuration in hyprpaper.conf

--- a/Rices/ocha/Config/hypr/hyprpaper.conf
+++ b/Rices/ocha/Config/hypr/hyprpaper.conf
@@ -1,2 +1,6 @@
-preload = ~/Pictures/Wallpapers/ocha.png
-wallpaper = , ~/Pictures/Wallpapers/ocha.png
+wallpaper {
+  monitor =
+  path = ~/Pictures/Wallpapers/ocha.png
+}
+
+splash = false
