Refactor hyprpaper.conf to use new wallpaper syntax

--- a/Rices/minimalist/Config/hypr/hyprpaper.conf
+++ b/Rices/minimalist/Config/hypr/hyprpaper.conf
@@ -1,2 +1,6 @@
-preload = ~/Pictures/Wallpapers/minimalist.png
-wallpaper = , ~/Pictures/Wallpapers/minimalist.png
+wallpaper {
+  monitor =
+  path = ~/Pictures/Wallpapers/minimalist.png
+}
+
+splash = false
