--- a/Rices/fuwamoco/Config/hypr/hyprpaper.conf
+++ b/Rices/fuwamoco/Config/hypr/hyprpaper.conf
@@ -1,2 +1,6 @@
-preload = ~/Pictures/Wallpapers/fuwamoco.jpg
-wallpaper = , ~/Pictures/Wallpapers/fuwamoco.jpg
+wallpaper {
+  monitor =
+  path = ~/Pictures/Wallpapers/fuwamoco.jpg
+}
+
+splash = false
